[tool.poetry]
name = "django-thorbanks"
version = "0.6.1"
description = "`django-thorbanks` provides a Django application for Estonian banklinks (iPizza protocol)."
authors = ["Thorgate <info@thorgate.eu>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "http://thorgate.eu"
repository = "https://github.com/thorgate/django-thorbanks"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
packages = [
    { include = "thorbanks" },
    { include = "thorbanks_models" },
]
include = [
    "README.md",
    "LICENSE",
    "thorbanks/static/img/payment/*",
    "thorbanks/templates/thorbanks/*"
]
exclude = ["**/migrations/*"]


[tool.poetry.dependencies]
python = "^3.6"
Django = ">=1.11.27"
cryptography = ">=2.*"

[tool.poetry.dev-dependencies]
pytest = "==6.*"
coverage = "==5.*"
coveralls = "==3.*"
pytest-cov = "==2.*"
pytest-django = "==4.*"
pytest-timeout = "==1.*"
mock = ">=1.0.1"
tox = "==3.*"
pytest-selenium = "==2.*"
selenium = "==3.*"
black = "==20.8b1"
isort = "*"
prospector = "==1.3.*"


[tool.black]
target-version = ["py36", "py37", "py38"]
include = "\\.pyi?$"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
